Reload and reset functionality added

--- a/2048-js/index.html
+++ b/2048-js/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles.css">
-  <script type="module" src="./script.js"></script>
-  <title>Document</title>
-</head>
-<body>
-  <div id="game-board">
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script type="module" src="./script.js"></script>
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="header">
+      <button id="reset">Reset</button>
+      <p class="title">2048</p>
+    </div>
+    <div id="game-container">
+      <div id="game-board"></div>
+    </div>
+  </body>
 </html>
